# yacht-tracker-streamer

./: .gitignore  LICENCE  NOTICE.md  README.md  pos-get.html  start_system.bat
GoPro-webcam/: pyproject.toml
GoPro-webcam/src/gopro_webcam/: __init__.py  gp_streamer.py  test_cam.py
GoPro-webcam/src/gopro_webcam/templates/: index.html
gopro-server/: LICENCE  NOTICE.md  README.md  gp_streamer.py  start.bat
gopro-server/static/css/: style.css
gopro-server/static/js/: main.js
gopro-server/templates/: index.html
pos-server/: package-lock.json  package.json  server.js
pos-server/public/: portal.html  pos-get.html  pos-script.js  pos-style.css
