[project]
name = "gopro-webcam"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "opencv-python>=4.13.0.92",
    "flask>=3.1.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gopro_webcam"]
